[ scotland the brave ] text will be added

--- a/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
+++ b/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
@@ -1,4 +1,4 @@
-% vim: ft=tex:
+% vim: ft=tex
 
 \stepcounter{subsection}
 
@@ -13,7 +13,59 @@
 
     \label{scotland_the_brave}
 
-    \beginverse
-        Example verse ...
+    \beginverse\memorize[verse]
+        Let Italy boast of her gay gilded waters
+        Her vines and her bowers and her soft sunny skies
+        Her sons drinking love from the eyes of her daughters
+        Where freedom expires amid softness and sighs
     \endverse
+
+    \beginchorus\memorize[chorus]
+        Scotland's blue mountains wild where hoary clifs are piled,
+        Towering in grandeur are dearer tae me.
+        Land of the misty cloud land of the, tempest loud.
+        Land of the brave and proud, land of the free
+    \endchorus
+
+    \beginverse\replay[verse]
+        Enthroned on the peak of her own highland mountains,
+        The spirit of Scotia reigns fearless and free.
+        Her green tartan waving o'ver blue rock and fountain
+        And proudly she sings looking over the sea.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Here among my mountains wild, I  have serenely smiled
+        When armies and empires against me were hurled.
+        Firm as my native rock, I have withstood the shock
+        Of England, of Denmark, or Rome and the world.
+    \endchorus
+
+    \beginverse\replay[verse]
+        But see how proudly her ware steeds are prancing.
+        Deep groves of steel trodden down in their path.
+        The eyes of my sons like their bright swords are glancing,
+        Triumphantly riding through ruin and death.
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Bold hearts and nodding plumes wave o'ver their bloody tombs
+        Deep eyed in gore is the green tartan's wave.
+        Shivering are the ranks of steel, dire is the horseman's wheel,
+        Victorious in battlefield, Scotland the brave.
+    \endchorus
+
+    \beginverse\replay[verse]
+        Hark, when the night is falling, hear, hear the pipes are calling
+        Loudly and proudly calling down through the glen
+        There where the hills are sleeping, now feel the blood a leaping
+        High as the spirits of the hold highland men
+    \endverse
+
+    \beginchorus\replay[chorus]
+        Towering in gallant fame, Scotland my mountain hame
+        High may your proud stanards gloriously wave.
+        Land o' the high endeavour, land o' the shining river
+        Land o' my heart forever Scotland the brave.
+    \endchorus
 \endsong
