[ scotland the brave ] typo

--- a/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
+++ b/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
@@ -38,7 +38,7 @@
         Here among my mountains wild, I  have serenely smiled
         When armies and empires against me were hurled.
         Firm as my native rock, I have withstood the shock
-        Of England, of Denmark, or Rome and the world.
+        Of England, of Denmark, of Rome and the world.
     \endchorus
 
     \beginverse\replay[verse]
