[ Wo sind die Clowsn ] added
Saltatio Mortis

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -142,9 +142,9 @@
             %\input{../src/viking_men/LaTeX/viking_men}
         \end{songs}{}
 
-    %\clearpage
-    %\songsection{Modern / Rock / Blues}{}
-    %    \begin{songs}{}
+    \clearpage
+    \songsection{Modern / Rock / Blues}{}
+        \begin{songs}{}
     %        %\input{../src/everything_burns/LaTeX/everything_burns}                                                              \sclearpage
     %        %\input{../src/little_talks/LaTeX/little_talks}                                                                      \sclearpage
     %        %\input{../src/mountain_climbing/LaTeX/mountain_climbing}                                                            \sclearpage
@@ -152,8 +152,9 @@
     %        %\input{../src/seven_nation_army/LaTeX/seven_nation_army}                                                            \sclearpage
     %        %\input{../src/sound_of_silence/LaTeX/sound_of_silence}                                                              \sclearpage
     %        %\input{../src/summer_wine/LaTeX/summer_wine}                                                                        \sclearpage
-    %        %\input{../src/timshel/LaTeX/timshel}
-    %    \end{songs}
+    %        %\input{../src/timshel/LaTeX/timshel}                                                                                \sclearpage
+            \input{../src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns}
+        \end{songs}
 
     \clearpage
     \songsection{Oldies}
