[ scotland the brave ] typos

--- a/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
+++ b/src/scotland_the_brave/LaTeX/scotland_the_brave.tex
@@ -21,7 +21,7 @@
     \endverse
 
     \beginchorus\memorize[chorus]
-        Scotland's blue mountains wild where hoary clifs are piled,
+        Scotland's blue mountains wild where hoary cliffs are piled,
         Towering in grandeur are dearer tae me.
         Land of the misty cloud land of the, tempest loud.
         Land of the brave and proud, land of the free
@@ -35,7 +35,7 @@
     \endverse
 
     \beginchorus\replay[chorus]
-        Here among my mountains wild, I  have serenely smiled
+        Here among my mountains wild, I have serenely smiled
         When armies and empires against me were hurled.
         Firm as my native rock, I have withstood the shock
         Of England, of Denmark, of Rome and the world.
@@ -64,7 +64,10 @@
 
     \beginchorus\replay[chorus]
         Towering in gallant fame, Scotland my mountain hame
-        High may your proud stanards gloriously wave.
+        High may your proud standards gloriously wave.
+        :q
+        :q
+
         Land o' the high endeavour, land o' the shining river
         Land o' my heart forever Scotland the brave.
     \endchorus
