--- a/src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns.tex
+++ b/src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns.tex
@@ -14,42 +14,42 @@
     \label{wo_sind_die_clowns}
 
     \begin{center}
-        \gtab{Am}{x02210:002310}
+        \gtab{Am}{X02210:002310}
         \gtab{F}{133211:134211}
         \gtab{C}{332010:342010}
         \gtab{G}{320033:210034}
         \gtab{G}{320033:210034}
-        \gtab{B}{x133x1:133311}
+        \gtab{Bm}{X244X2:133311}
     \end{center}
 
     \beginverse\memorize[verse]
-        \[Am]Jeden Tag die gleichen Bilder: \[C]Mord, Krieg, Hunger \[D]und Gewalt.
-        \[Am]Jeden Tag der gleiche Horror \[C]hallt aus uns'rem Bl\[D]\"{a}tterwald.
-        \[Am]Schrill klingt das mediale Echo \[C] auf jeden Re\[D]issack, der umf\[F]\"{a}llt.
-        Wo steckt der Schalk, wo bleibt das \[C]Lachen, wo \[B] die \[Am]Clowns in \[G]dieser \[F]Welt?
+        J\[Am]eden Tag die gleichen Bilder: M\[C]ord, Krieg, Hunger \[D]und Gewalt.
+        J\[Am]eden Tag der gleiche Horror h\[C]allt aus uns'rem Bl\[D]\"{a}tterwald.
+        Schr\[Am]ill klingt das mediale Echo \[C] auf jeden Re\[D]issack, der umf\[F]\"{a}llt.
+        Wo steckt der Schalk, wo bleibt das L\[C]achen, wo die Cl\[G]owns in dieser \[F]Welt?
     \endverse
 
     \beginchorus\memorize[chorus]
-        \[F] Wo sind die \[C]Clowns, \[G]wo sind die \[Am]Narren,
-        \[F]wer hat das \[C]Lachen abgest\[G]ellt?
-        Wo \[F]ist der \[C]Spa\ss{}, wo \[G]bleibt der \[Am]Leichtsinn,
-        \[F] wo sind die \[C]Clowns in dieser \[G]Welt?
-        \[F]In \[C]dieser \[Am]Welt?
+        Wo sind die Cl\[C]owns, w\[G]o sind die N\[Am]arren,
+        \[F] wer hat das L\[C]achen abgest\[G]ellt?
+        Wo \[F]ist der Sp\[C]a\ss{}, wo bl\[G]eibt der L\[Am]eichtsinn,
+        \[F] wo sind die Cl\[C]owns in dieser W\[G]elt?
+        In d\[C]ies\[Bm]er W\[Am]elt?
     \endchorus
 
     \beginverse\replay[verse]
         ^Immer weiter, immer h\"{o}her, uns're Welt f\"{a}hrt Karussell.
-        ^Keine Zeit f\"{u}r echte MEnschen, ^Freundschaft ist heut' ^virtuell.
-        ^Keine Zeit f\"{u}r dumme Spiele, denn Spa\ss{} braucht Zeit und Zeit ist Geld.
-        ^Wir sind vom Fortschritt \"{u}ber^fahr'n, ^wo sind die ^Clowns in ^dieser ^Welt?
+        K^eine Zeit f\"{u}r echte Menschen, Fr^eundschaft ist heut' virtuell.
+        K^eine Zeit f\"{u}r dumme Spiele, denn Sp^a\ss{} braucht Zeit und Z^eit ist Geld.
+        \[F] Wir sind vom Fortschritt \"{u}berf\[C]ahr'n, wo sind die Cl\[G]owns in dieser W\[F]elt?
     \endverse
 
     \beginchorus\replay[chorus]
-        ^ Wo sind die ^Clowns, ^wo sind die ^Narren,
-        ^wer hat das ^Lachen abgest^ellt?
-        Wo ^ist der ^Spa\ss{}, wo ^bleibt der ^Leichtsinn,
-        ^ wo sind die ^Clowns in dieser ^Welt?
-        ^In ^dieser ^Welt?
+        Wo sind die Cl^owns, w^o sind die N^arren,
+        ^ wer hat das L^achen abgest^ellt?
+        Wo ^ist der Sp^a\ss{}, wo bl^eibt der L^eichtsinn,
+        ^ wo sind die Cl^owns in dieser W^elt?
+        In d^ies^er W^elt?
     \endchorus
 
     \beginverse
@@ -58,16 +58,16 @@
     \endverse
 
     \beginchorus\replay[chorus]
-        ^ Wo sind die ^Clowns, ^wo sind die ^Narren,
-        ^wer hat das ^Lachen abgest^ellt?
-        Wo ^ist der ^Spa\ss{}, wo ^bleibt der ^Leichtsinn,
-        ^ wo sind die ^Clowns in dieser ^Welt?
-        ^In ^dieser ^Welt?
+        Wo sind die Cl^owns, w^o sind die N^arren,
+        ^ wer hat das L^achen abgest^ellt?
+        Wo ^ist der Sp^a\ss{}, wo bl^eibt der L^eichtsinn,
+        ^ wo sind die Cl^owns in dieser W^elt?
+        In d^ies^er W^elt?
     \endchorus
 
     \beginchorus
-        \[Am] \[C] wo sind die Clowns in dieser \[F]Welt?
-        \[G] \[F]Wo sind \[C]die \[Am]Clowns?
-        \[B] \[C] \[D]Wir brauchen \[E]Clowns in dieser \[Am]Welt!
+        \[Am] \[C] wo sind die Clowns in dieser W\[F]elt?
+        \[G] Wo sind die Cl\[Am]owns? \[C] \[F]
+        \[G] Wir brauchen Clowns in d\[C]ies\[Bm]er W\[Am]elt!
     \endchorus
 \endsong
