[ templates ] LaTeX template overhaul
adds example chords and verses, bridge and chorus

--- a/Templates/template.tex
+++ b/Templates/template.tex
@@ -13,7 +13,22 @@
 
     \label{<INDEX>}
 
-    \beginverse
+    \begin{center}
+        \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
+        \gtab{G}{320033:210034}
+        \gtab{F}{133411:134211}
+    \end{center}
+
+    \beginverse\memorize[verse]
         Example verse ...
+    \endverse
+
+    \beginverse\replay[verse]
+    \endverse
+
+    \beginchorus\memorize[chorus]
+    \endchorus
+
+    \beginverse*\memorize[bridge]
     \endverse
 \endsong
