--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -145,8 +145,9 @@
 
     %\clearpage
     %\songsection{Modern / Rock / Blues}{}
-        %\begin{songs}{}
+    %    \begin{songs}{}
     %        %\input{../src/everything_burns/LaTeX/everything_burns}                                                              \sclearpage
+    %        %\input{../src/leap_into_the_dark/LaTeX/leap_into_the_dark}                                                          \sclearpage
     %        %\input{../src/little_talks/LaTeX/little_talks}                                                                      \sclearpage
     %        %\input{../src/mountain_climbing/LaTeX/mountain_climbing}                                                            \sclearpage
     %        %\input{../src/rolling_in_the_deep/LaTeX/rolling_in_the_deep}                                                        \sclearpage
@@ -154,8 +155,8 @@
     %        %\input{../src/sound_of_silence/LaTeX/sound_of_silence}                                                              \sclearpage
     %        %\input{../src/summer_wine/LaTeX/summer_wine}                                                                        \sclearpage
     %        %\input{../src/timshel/LaTeX/timshel}                                                                                \sclearpage
-            %\input{../src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns}
-        %\end{songs}
+    %        %\input{../src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns}
+    %    \end{songs}
 
     \clearpage
     \songsection{Oldies}
