[ release 20180519 ] just a kind of demo, test, you name it
This version will revamp the disclaimer and add a note regarding the
tuning of my guitar and annotations regarding the tuning for each song,
if done.

Also, some mistakes and finetuning to the songs will be made.

--- a/src/geisterschiff/LaTeX/geisterschiff.tex
+++ b/src/geisterschiff/LaTeX/geisterschiff.tex
@@ -11,6 +11,8 @@
 
     \label{geisterschiff}
 
+    \capo{6}
+
     \begin{center}
         \gtab{Em7}{022030:012040}
         \gtab{Em6}{022020:012030}
@@ -26,7 +28,7 @@
 
     \beginverse*
         \textnote{Intro 1}
-        \lrep  \[Em7] \[Em7] \[Em6] \[Em6] \rrep \rep{2}
+        \lrep  \[Em7] \[Em6] \[Em7] \[Em6] \rrep \rep{2}
     \endverse
 
     \beginverse*
@@ -38,7 +40,7 @@
         Es w\[Em7]ar in einer Sturmnacht, als die W\[Em6]ellen hoch wie H\"{a}user,
         Als die Gl\[C]ocken schlugen wild Alarm, ein Sch\[G]iff zu dicht ans \[D]Ufer kam.
         Wir h\[Em7]atten falsches Licht entz\"{u}ndet, \[Em6] es zu leiten in die Riffe,
-        \[C] Es zu pl\"{u}ndern ohne Gnade w\[G]enn es dort sein \[D]Ende findet.
+        \[C] Es zu pl\"{u}ndern ohne Gnade, w\[G]enn es dort sein \[D]Ende findet.
         S\[Em7]egel rissen, Balken \"{a}chzten, M\[Em6]ast und Schote brachen laut,
         \[C] M\"{a}nner schrien lang' um Hilfe, \[G] bis sie sich das W\[D]asser nahm!
         \[Em7] Der n\"{a}chste Morgen lag im Nebel, \[Em6] wir am Strand der Beute wegen,
@@ -80,7 +82,7 @@
         L^\"{a}uft querab zur K^\"{u}ste, zu den R^iffen und macht h^alt!
     \endverse
 
-    \textnote{Feuer geben!}
+    \textnote{!!! FEUER !!!}
 
     \beginchorus\replay[chorus]
         D^ann, ein F^euer in der Nacht, ^ das Schiff in Fl^ammen lichterl^oh!
@@ -90,8 +92,8 @@
     \endchorus
 
     \beginchorus\replay[chorus]
-        D^ann, ein F^euer in der Nacht, ^ \ldots ^ \ldots
-        ^ Seht, es ^ist erneut erw^acht, \ldots ^ \ldots ^ \ldots ^ \ldots
+        D^ann, ein F^euer in der Nacht, ^ ^
+        ^ Seht, es ^ist erneut erw^acht, ^ ^ ^
         Ooh^Ooh es leuchtet h^ell, es leuchtet w^eit, es ist n^icht zu \"{u}bers^eh'n
         Und kein ^and'rer Kapit^\"{a}n sah seith^er sein Boot zu Gr^unde g^eh'n!
     \endchorus
@@ -102,7 +104,7 @@
     \endverse
 
     \beginverse*
-        \textnote{Intro 2, Ritardando, enden mit Flagolet im zw\"{o}lften Bund auf Saiten 1-3,6 \textit{E-Moll}}
+        \textnote{Intro 2, Ritardando, enden mit Flagolet 12. Bund auf Saiten 1-3,6 (\textit{E-Moll})}
         \[C\textsuperscript{1}] \[C\textsuperscript{2}] \[G] \[D] \[Em]
     \endverse
 \endsong
