--- a/src/the_rattlin_bog/LaTeX/the_rattlin_bog.tex
+++ b/src/the_rattlin_bog/LaTeX/the_rattlin_bog.tex
@@ -17,6 +17,8 @@
         \gtab{D}{XX0232:0000132}
     \end{center}
 
+    \textnote{Im Laufe des Liedes immer und immer schneller werden. Die letzte Strophe muss \textbf{absurd schnell} sein!}
+
     \beginchorus\memorize[chorus]
         \[G]Oh, hoh, the r\[C]attlin' bog, the b\[G]og down in the v\[D]alley - o,
         \[G]oh, hoh, the r\[C]attlin' bog, the b\[G]og down in the v\[D]alley - \[G]o.
@@ -27,6 +29,7 @@
     \endverse
 
     \beginverse*
+        \textnote{A capella, aber den Takt merkbar klopfen (mit dem Fu\ss{} auftreten, sinnvoll auf einer Trommel schlagen, \ldots)}
         A tree in the bog and the bog down in the valley - o.
     \endverse
 
